@@ -1,3 +1,14 @@
+2013-08-12  Anton Obzhirov  <a.obzhirov@samsung.com>
+
+        [GTK] Don't load GAIL when using GTK 3.2 or greater
+        https://bugs.webkit.org/show_bug.cgi?id=72735
+
+        Reviewed by Carlos Garcia Campos.
+
+        * tests/testatk.c:
+        (initializeTestingFramework):
+        (main):
+
 2013-08-11  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Update NEWS and Versions.m4 for 2.1.4 release.
